# hardware_benchmarks

./: CMakeLists.txt  README.md  arch_bench.hpp  cache_latency.cpp  main.cpp  vcache_jitter.cpp
data/: branch_data.csv  cache_sweep.csv  ilp_sweep.csv  tlb_sweep.csv  vcache_samples.csv
python/: plot_branch.py  plot_cache.py  plot_ilp.py  plot_tlb.py  plot_vcache.py
src/: arch_bench.hpp  branch_prediction.cpp  cache_latency.cpp  enable_group_protocol.bat  false_sharing.cpp  ilp_hazards.cpp  tlb_walks.cpp  vcache_jitter.cpp
